Working send email
