# laravel.pv113.com/routes/api.php
@@ -13,3 +13,5 @@ Route::get('/categories/{id}', [CategoriesController::class, 'getById']);
 Route::post('/categories/create', [CategoriesController::class, 'create']);
 Route::delete("/categories/{id}", [CategoriesController::class, "delete"]);
 Route::post("/categories/edit/{id}", [CategoriesController::class, "edit"]);
+
+Route::post('/categories/send', [CategoriesController::class, 'send']);
