# laravel.pv113.com/storage/api-docs/api-docs.json
@@ -174,6 +174,36 @@
                     }
                 }
             }
+        },
+        "/api/categories/send": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "operationId": "9662ef382d95fb21496ea710a3d59931",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "email"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Add Category."
+                    }
+                }
+            }
         }
     }
 }
